--- a/debian/changelog.in
+++ b/debian/changelog.in
@@ -1,5 +1,5 @@
-elementals (%%VERSION%%.%%DISTRO%%.%%SUBVERSION%%) %%DISTRO%%; urgency=low
+spod2html (%%VERSION%%.%%DISTRO%%.%%SUBVERSION%%) %%DISTRO%%; urgency=low
 
   * Initial release 
 
- -- Hans Oesterholt (Lives in the Netherlands) <debian@oesterholt.net>  Fri, 08 Feb 2013 09:24:23 +0200
+ -- Hans Oesterholt (Lives in the Netherlands) <debian@oesterholt.net>  Fri, 10 Feb 2013 09:24:23 +0200
